<resources>
    <string name="app_name">MedGuide</string>
    <string name="logo_desc">MedGuide</string>
    <string name="login_choices">Numéro de téléphone, Nom d\'utilisateur ou email </string>
    <string name="signin">Vous n\'avez pas de compte ? Inscrivez-vous</string>
    <string name="forgot_password">Mot de pass oublié?</string>
    <string name="login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="sidebar">menu</string>
    <string name="continue_with_google">continue avec google</string>
    <string name="warning_message">Les informations fournies par MedGuide ne remplacent pas un avis médical. Consultez un professionnel de la santé pour un diagnostic précis.</string>
    <string name="symptomsInput">Décrivez vos symptômes ici</string>
    <string name="questionText">Quels sont vos symptômes ?</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="medecins">Médecins</string>
    <string name="medicaments">Médicaments</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="garde">Pharmacies de Garde</string>
    <string name="partager">Partager</string>
    <string name="logout">Se déconnecter</string>
    <string name="home">Acceuil</string>
    <string name="login_failed">connexion non réussite, veuillez reessayer</string>
    <string name="invalid_username">Nom d\'utilisateur invalide</string>
    <string name="invalid_password">Mot de passe invalide</string>
    <string name="suivant">Suivant</string>
    <string name="confirm">Confirmer le mot de passe</string>
    <string name="birthday">Date de naissance (JJ/MM/AAAA)</string>
    <string name="email">Email</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="phonenumber">Numéro</string>
    <string name="handicap">presentez-vous un handicap ?</string>
    <string name="diabetique">Êtes-vous diabétique ?</string>
    <string name="allergies">Avez-vous des allergies ?</string>
    <string name="soumettre">Soumettre</string>
    <string name="allergiesdetails">Veuillez préciser vos allergies</string>
    <string name="grpsanguin">Quel est votre groupe sanguin ?</string>
    <string name="poids">Poids (en kg)</string>
    <string name="taille">Taille (en cm)</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="sante">Découvrir votre santé</string>
    <string name="nom_aspirin">Nom: Aspirin</string>
    <string name="prix_50_dh">Prix: 50 DH</string>
    <string name="taux_de_remboursement_80">Taux de Remboursement: 80%</string>
    <string name="forme_comprim">Forme: Comprimé</string>
    <string name="pr_sentation_bo_te_de_30_comprim_s">Présentation: Boîte de 30 comprimés</string>
    <string name="doctors" />
    <string name="nom_docteur" />
    <string name="adresse_oujda" />
    <string name="numero_de_telephone" />
    <string name="specialite" />
    <string name="horaire" />
    <string name="nom_oujda" />
    <string name="numero_oujda" />
    <string name="oujda_24h" />
    <string name="reinitialize_password">Réinitialiser le mot de passe</string>
    <string name="remember_password">Se souvenir de votre mot de passe</string>
    <string name="login_here">Se connecter ici</string>
    <string name="password_reinitialization_form">Formulaire de réinitialisation du mot de passe</string>
    <string name="reinitialize_password_with_email">Entrez votre adresse email</string>
    <string name="historique">Historique</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>