<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/doctors"
            android:title="@string/medecins"/>
        <item
            android:id="@+id/nav_medicaments"
            android:icon="@drawable/medicaments"
            android:title="@string/medicaments"/>
        <item
            android:id="@+id/nav_pharmacie"
            android:icon="@drawable/pharmacie"
            android:title="@string/pharmacies"/>
        <item
            android:id="@+id/nav_pharmacie_garde"
            android:icon="@drawable/pharmacie_garde"
            android:title="@string/garde"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/partager"/>

        <item
            android:title="">

            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/login"
                    android:title="@string/login"/>

            </menu>
        </item>
    </group>
</menu>