<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/selectableItemBackground"
    android:layout_margin="8dp">

    <!-- Product Name -->
    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_docteur"
        android:textColor="@color/MedGuide_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        />

    <!-- Price -->
    <TextView
        android:id="@+id/textViewAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adresse_oujda"
        android:textSize="14sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edit_text"/>

    <!-- Reimbursement Rate -->
    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero_de_telephone"
        android:textSize="14sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edit_text"/>

    <!-- Forme -->
    <TextView
        android:id="@+id/textViewSpecialite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specialite"
        android:textSize="14sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edit_text"/>

    <!-- Presentation -->


</LinearLayout>
