<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:ignore="ExtraText">

    <!-- Menu Button -->

    <!-- Logo -->
    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sidebar"
        android:scaleType="centerInside"
        android:src="@drawable/hamburger" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/medguide"
        android:alpha="0.5"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <!-- Title or Question Text -->
    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionText"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:paddingBottom="20dp" />

    <!-- Input field -->
    <EditText
        android:id="@+id/symptomsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/symptomsInput"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <!-- Warning Message -->
    <TextView
        android:id="@+id/warningMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/warning_message"
        android:textColor="#E0E0E0"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        tools:ignore="VisualLintLongText" />
    android:layout_centerHorizontal="true" />
</RelativeLayout>
